# murari

./: .gitignore  CLAUDE.md  README.md  RELEASE.txt  conftest.py  pyproject.toml
.claude/agents/: brainstormer.md
.claude/skills/execute-issues/: SKILL.md
.claude/skills/generate-issues/: SKILL.md
.claude/skills/release-version/: SKILL.md
.claude/skills/upload-issues/: SKILL.md
docs/: USAGE.md
examples/: TOPIC.md
murari/: __init__.py  __main__.py  chat.py  cli.py  config.py  contract.py  engine.py  haiku.py  ledger.py  participant.py  planner.py  presenter.py  runner.py  session.py  tui.py  veduchyi.py
scripts/: brainstorm.sh  new-session.sh
spec/: architecture.md  brainstormer.md  mission.md  murari-CONCEPT.md  roadmap.md  strategies.md
spec/implementation/: phase0-execution-report.md  phase0-github-report.md  phase0-issues.md  phase1-execution-report.md  phase1-github-report.md  phase1-issues.md  phase2-execution-report.md  phase2-github-report.md  phase2-issues.md  phase3-execution-report.md  phase3-github-report.md  phase3-issues.md
tests/: test_agent_output_contract.py  test_chat.py  test_cli.py  test_config.py  test_contract.py  test_engine.py  test_haiku.py  test_ledger.py  test_participant.py  test_planner.py  test_presenter.py  test_runner.py  test_session.py  test_tui.py  test_veduchyi.py  test_workspace_format.py
tests/fixtures/captured-run/: DOCUMENT.md  IDEAS.md  LEDGER.md  NOTES.md  SOURCES.md  run-1.json  run-2.json
tests/fixtures/contract-v2/: deepen.json  evaluate.json  generate.json  mutate.json  oppose.json  weave.json
(+3 files in other folders)
